# Squid

./: .gitignore  README.md  example.qmd  test.csx
sample/: index.html  main.csx  script.r  viewer.csx  viewer.html
sample/1_navigate/: index.html  navigated.html
sample/2_clickevent/: index.html  main.csx  script.r  selenium.csx
sample/3_image/: index.html  viewer.csx  viewer.html  viewer.r
sample/4_qmd/: canvas.html  index.html  main.qmd  mermaid.html  plot.html
sample/5_state_mgr/: index.html  test.csx
sample/5_viewer/: canvas.html  canvas_making.html  index.html  index2.html  main.qmd  opencv.csx  reader.csx  test.csx  viewer.csx  viewer.r
sample/6_wasm/: Cargo.toml  index.html  sample.js  sample.wasm  wasm_pack.js  wasm_pack_bg.wasm  wasm_vanilla.wasm
sample/6_wasm/src/: lib.rs
sample/6_wasm/wasm_pack/: Cargo.toml
sample/6_wasm/wasm_vanilla/src/: lib.rs
sample/7_drag_and_drop/: index.html
sample/rust/: Cargo.toml
sample/rust/src/: lib.rs
src/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Squid.csproj
src/model/: ConsoleEx.cs  Ipc.cs  Javascript.cs  MemoryMap.cs  Option.cs  Options.cs  SquidMain.cs
src/resource/: Color.js  Color.preload.js  Draw.preload.js  HIDEvent.js  HIDEvent.preload.js  StateMgr.js  StateMgr.preload.js  Window.js  test.js_  test.txt
