[package]
name = "sample"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# js-sys = "0.3.51"
# wasm-bindgen = "0.2.74"

# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   'CanvasRenderingContext2d',
#   'Document',
#   'Element',
#   'HtmlCanvasElement',
#   'Window',
# ]

# rustup target add wasm32-wasi
# cargo build --target wasm32-wasi
# cargo build --target wasm32-unknown-unknown
# cargo build --target=wasm32-unknown-unknown --release  