[package]
name = "pipe_sample"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
anyhow = "*"

named_pipe = "0.4.1"

winapi = { version = "0.3.9", features = ["winbase"] }
# kernel32-sys = "0.2.2"